# ErrorSpanAnnotation

./: .gitignore  20240411_poll_results.csv  Annotators_mapping.csv  README.md  main.py  main_new.py  pyproject.toml  requirements.txt
ESA/: analysis_document_speedup.py  analysis_edit_degree.py  analysis_gemba.py  analysis_overreliance.py  analysis_time_spans.py  annotation_loader.py  annotations.py  figutils.py  fixed_segment_ids.py  get_data.sh  human_scores.py  merged_annotations.py  protocol.py  settings.py  utils.py
analysis/: basic_avg.py
appraise-preparation/: ai_demo_launch.sh  ai_demo_manifest.json  ai_demo_prepare.sh  ai_demo_start.sh  komatik_campaign_prepare.sh  mqm_human_wmt.py  ruction_campaign_prepare.sh  ruction_launch.sh  ruction_manifest_esa gemba.json  ruction_manifest_esa.json  ruction_manifest_mqm.json  utils.py  wmt_demo_launch.sh  wmt_demo_manifest.json  wmt_demo_prepare.sh  wmt_demo_start.sh
campaign-ruction-rc5/: 240315rc5ESA.scores.csv  240520rc6ESA.scores.csv  240521rc6ESA.scores.csv  240521rc6GEMBA.scores.csv  en-de.ESA-1.seg.score  en-de.ESA-2.seg.score  en-de.ESA-IAA.seg.score  en-de.ESA.seg.score  en-de.ESAAI-1.seg.score  en-de.ESAAI-2.seg.score  en-de.ESAAI-IAA.seg.score  en-de.ESA_severity.seg.score  en-de.GEMBA.seg.score  en-de.GEMBA2.seg.score  en-de.GEMBA_severity.seg.score  en-de.LLM.seg.score  en-de.MQM-1.seg.score  en-de.MQM-IAA.seg.score  en-de.MQM.seg.score  en-de.MQM_severity.seg.score
data/: Annotators_mapping.csv  README.md  wmt23_en-de.mqm.merged_sorted.seg.rating
interface/: README.md  demo_test_campaign.sh  utils.py  (+3 more)
(+163 files in other folders)
