[project]
name = "ErrorSpanAnnotations"
version = "0.0.0"
dependencies = [
    "matplotlib",
    "numpy==1.26.4",
    "pandas==1.5.3",
    "ipdb",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# include only the ESA/ directory
packages = ["ESA"]